Eliminazione bug duplicazione dei tentativi test